<resources>
    <string name="app_name">phoneSearch</string>
    <string name="phone_search_name">手机号码归属地查询</string>
    <string name="phone_search">手机号码查询</string>
    <string name="input_phone">请输入手机号码查询</string>
    <string name="search_btn">查询</string>
    <string name="search_result">查询结果</string>
    <string name="phone">手机号:</string>
    <string name="province">省份:</string>
    <string name="catName">运营商:</string>
    <string name="carrier">归属运营商:</string>
</resources>
