<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.constraint.ConstraintLayout-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:context="com.example.cui.phonesearch.MainActivity">-->

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Hello World!"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->

<!--</android.support.constraint.ConstraintLayout>-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.cui.phonesearch.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@mipmap/apple02"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/phone_search_name"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="@color/title_txt_color"
        android:text="@string/phone_search" />

    <EditText
        android:id="@+id/input_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:hint="@string/input_phone"
        android:textColorHighlight="@color/hint_color"
        />
    
    <Button
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/button_background_color"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:text="@string/search_btn"
        />
    
    <!-- 查询结果-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:textColor="@color/search_title_color"
        android:text="@string/search_result"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:orientation="vertical">
        
        <TextView
            android:id="@+id/result_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingLeft="40dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@android:color/black"
            android:text="@string/phone"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/main_background"
            />
        <TextView
            android:id="@+id/result_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingLeft="40dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@android:color/black"
            android:text="@string/province"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/main_background"
            />

        <TextView
            android:id="@+id/result_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingLeft="40dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@android:color/black"
            android:text="@string/catName"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/main_background"
            />
        <TextView
            android:id="@+id/result_carrier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingLeft="40dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@android:color/black"
            android:text="@string/carrier"
            />

    </LinearLayout>
</LinearLayout>